1999-07-05  Alex Lancaster  <alex@santafe.edu>

	* simtools.h (initSwarmAppArguments): Fixed macro,
	STRINGIFY(APPNAME) -> APPNAME_STRING.

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ObjectLoader.m: Remove [-+]_crash_: methods.  
	(loadAborted): Add.
	(ABORT): New macro (add filename and lineno info).
	([ObjectLoader +load:fromFileNamed:], [ObjectLoader -loadObject:]): 
	Use it instead of _crash_.

	* InFile.m ([InFile -getWord:]): Don't use fscanf for string.

	* QSort.m: Use size_t for size, not int.  Use size_t for `i' in
	all methods.
	([QSort +_flatten_:]): xmalloc `flat' using sizeof id, not int.
	(cmpInts): Use PTRINT as argument type.
	([QSort +sortNumbersIn:]): Use PTRINT as element size, not int.
	([QSort +sortNumbersIn:using:]): Use PTRINT as element size, not
	int.
	([QSort +reverseOrderOf:]): xmalloc `flat' using size of id
	not int.

1999-06-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* AppendFile.[hm] ([AppendFile +create:setName:]): Renamed from
	+create:withName:. 

	* OutFile.[hm] ([OutFile +create:setName:]): Likewise.

	* InFile.[hm] ([InFile +create:setName:]): Likewise.

	* simtools.h: Reflect these changes.

	* ObjectSaver.m ([ObjectSaver +save:toFileNamed:],
	[ObjectSaver +save:toFileNamed:withTemplate:]): Likewise.

1999-06-21  Alex Lancaster  <alex@santafe.edu>

	* simtools.h (InFile, OutFile, AppendFile, ObjectSaver,
	ObjectLoader): Markup with `//x:' doc-string as deprecated
	protocols.  Move explanatory text originally in `//D:' markup to
	new tag, where appropriate.

	* Makefile.am (simtools_HEADERS): Add initSwarm.h.

	* initSwarm.h: New file

	* simtools.h (_initSwarm_, STRINGIFY, STRINGIFYSYM,
	APPNAME_STRING, APPVERSION_STRING, BUGADDRESS_STRING): Remove,
	hide from user in new include'd initSwarm.h.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.m (run_constructors): New static function.
	(_initSwarm_): Call it for hpux.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
